<resources>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="power_consumption">Güç tüketimi: %1$.1fmA</string>
    <string name="error_required">Boş bırakılamaz.</string>
    <string name="app_name">Veri Toplayıcı</string>
    <string name="sensor_accelerometer">İvmeölçer</string>
    <string name="sensor_ambient_temperature">Sıcaklık</string>
    <string name="sensor_gravity">Yer Çekimi</string>
    <string name="sensor_gyroscope">Jiroskop</string>
    <string name="sensor_light">Işık</string>
    <string name="sensor_linear_acceleration">Lineer İvme</string>
    <string name="sensor_magnetic_field">Manyetik Alan</string>
    <string name="sensor_pressure">Basınç</string>
    <string name="sensor_proximity">Yakınlık</string>
    <string name="sensor_relative_humidity">Nem</string>
    <string name="sensor_rotation_vector">Dönüş Vektörü</string>
    <string name="sensor_all">Birden çok</string>
    <string name="sensor_multiple">Çoklu Kayıt</string>
    <string name="title_activity_accelerometer">AccelerometerActivity</string>
    <string name="monitor">İzle</string>
    <string name="schedule">Zamanla</string>
    <string name="records">Kayıtlar</string>
    <string name="records_history">Geçmiş Kayıtlar</string>
    <string name="records_mail_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="record_deleted_succesfully">Başarı ile silindi.</string>
    <string name="record_could_not_be_deleted">Silinemedi.</string>
    <string name="schedule_active">Aktif</string>
    <string name="schedule_passive">Pasif</string>
    <string name="schedule_start_time">Başlangıç Saati</string>
    <string name="schedule_not_activated">Zamanlanmış kayıt işlemi aktif değil.</string>
    <string name="schedule_fill_required_fields">Zorunlu alanları doldurun.</string>
    <string name="schedule_activated">Kayıt işlemi %1$s saatinde başlayarak %2$s %3$s saat %4$s dakika süreyle çalışacak.</string>
    <string name="schedule_record_frequency">Kayıt Sıklığı</string>
    <string name="schedule_record_length_hour">Kayıt Süresi(Saat)</string>
    <string name="schedule_record_length_minute">Kayıt Süresi(Dakika)</string>
    <string name="schedule_sensor_list">Sensörler</string>
    <string name="record_started">%1$s sensörü için kayıt işlemi başladı.</string>
    <string-array name="schedule_frequencies">
        <item>Bir kere</item>
        <item>Her gün</item>
        <item>Haftada bir</item>
    </string-array>
    <string-array name="schedule_frequeny_values">
        <item>0</item>
        <item>1440</item>
    </string-array>
    <string name="config">Ayarla</string>
    <string name="start">Başla</string>
    <string name="finish">Bitir</string>
    <string name="config_file_name">Aktivite Adı</string>
    <string name="config_frequency">Frekans</string>
    <string name="config_date_format">Tarih Formatı</string>
    <string name="config_precision">Hassasiyet</string>
    <string name="config_mail">E-Posta</string>
    <string name="sensor_info_title">Sensör Bilgileri</string>
    <string name="sensor_info_name">İsim</string>
    <string name="sensor_info_vendor">Üretici</string>
    <string name="sensor_info_version">Versiyon</string>
    <string name="sensor_info_maximum_range">Maks. Aralık</string>
    <string name="sensor_info_resolution">Çözünürlük</string>
    <string name="sensor_info_power">Güç(mA)</string>
    <string name="sensor_info_minimum_delay">Min. Gecikme(us)</string>
    <string name="accelerometer_request_code">1</string>
    <string name="multiple_config_fileName">Multiple</string>
    <string name="acceleration_config_fileName">Accelerations</string>
    <string name="accelerometer_config_fileName">Accelerometer</string>
    <string name="gyroscope_config_fileName">Gyroscope</string>
    <string name="gravity_config_fileName">Gravity</string>
    <string name="temperature_config_fileName">Temparature</string>
    <string name="light_config_fileName">Light</string>
    <string name="linear_acceleration_config_fileName">LinearAcceleration</string>
    <string name="magnetic_field_config_fileName">MagneticField</string>
    <string name="pressure_config_fileName">Pressure</string>
    <string name="proximity_config_fileName">Proximity</string>
    <string name="humidity_config_fileName">Humidity</string>
    <string name="rotation_config_fileName">Rotation</string>
    <string-array name="date_formats">
        <item>yyyy-MM-dd HH:mm:ss:SSS</item>
        <item>HH:mm:ss:SSS</item>
        <item>MM-dd HH:mm:ss:SSS</item>
        <item>dd.MM.YYYY</item>
    </string-array>
    <string name="default_date_format">dd.MM.YYYY</string>
    <string name="shared_preferences_sensorName">sensorName</string>
    <string name="shared_preferences_fileName">fileName</string>
    <string name="shared_preferences_frequency">frequency</string>
    <string name="shared_preferences_precision">precision</string>
    <string name="shared_preferences_startTime">startTime</string>
    <string name="shared_preferences_recordLength">recordLength</string>
    <string name="shared_preferences_mail">mail</string>
    <string name="shared_preferences_scheduleActive">scheduleActive</string>

</resources>

