<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dateFormatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_date_format" />

    <Spinner
        android:id="@+id/dateFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/frequencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/config_frequency"
            android:inputType="number"
            android:maxLength="2"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/fileNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/config_file_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/precisionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/precision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/config_precision"
            android:inputType="number"
            android:maxLength="1" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="255">

        <EditText
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/config_mail"
            android:inputType="textWebEmailAddress"
            android:maxLength="255" />


    </android.support.design.widget.TextInputLayout>


</LinearLayout>