<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:layout_weight="0.7"
            android:text="@string/sensor_info_name" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="A"
            android:layout_weight="0.3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vendorLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:layout_weight="0.7"
            android:text="@string/sensor_info_vendor" />

        <TextView
            android:id="@+id/vendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/versionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:layout_weight="0.7"
            android:text="@string/sensor_info_version" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/maximumRangeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:layout_weight="0.7"
            android:text="@string/sensor_info_maximum_range" />

        <TextView
            android:id="@+id/maximumRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/resolutionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:layout_weight="0.7"
            android:text="@string/sensor_info_resolution" />

        <TextView
            android:id="@+id/resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/powerLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:layout_weight="0.7"
            android:text="@string/sensor_info_power" />

        <TextView
            android:id="@+id/power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/minimumDelayLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:layout_weight="0.6"
            android:text="@string/sensor_info_minimum_delay" />

        <TextView
            android:id="@+id/minimumDelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" />
    </LinearLayout>

</LinearLayout>