<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
                android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:layout_marginLeft="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/scheduleInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />


    <CheckBox
        android:id="@+id/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:checked="false"
        android:text="Aktif"
        android:layout_below="@+id/scheduleInfo"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/recordFrequencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_below="@+id/active"
        android:text="@string/schedule_record_frequency" />

    <Spinner
        android:id="@+id/recordFrequency"
        android:layout_width="wrap_content"
        android:layout_below="@+id/recordFrequencyLabel"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/startTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/schedule_start_time"
        android:layout_alignTop="@+id/recordFrequencyLabel"
        android:layout_toEndOf="@+id/recordLengthHourLabel">

        <EditText
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/recordLengthHourLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startTimeLabel"
        android:hint="@string/schedule_record_length_hour">

        <EditText
            android:id="@+id/recordLengthHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="8"
            android:maxLength="2" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/recordLengthMinuteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startTimeLabel"
        android:layout_toRightOf="@+id/recordLengthHourLabel"
        android:hint="@string/schedule_record_length_minute">

        <EditText
            android:id="@+id/recordLengthMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="8"
            android:maxLength="2" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sensorListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recordLengthHourLabel"
        android:hint="@string/schedule_sensor_list">

        <EditText
            android:id="@+id/sensorList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:visibility="gone"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </android.support.design.widget.TextInputLayout>


</RelativeLayout>