<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:id="@+id/dateFormatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/config_date_format"/>

    <Spinner
        android:id="@+id/dateFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateFormatLabel"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/frequencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateFormat"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/config_frequency"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="3"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/fileNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frequencyLabel"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/config_file_name"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/fileNameContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fileNameLabel"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_alignParentBottom="true"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/addActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add_black_24dp"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/precisionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fileNameContainer"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/precision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/config_precision"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="1"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/precisionLabel"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/config_mail"
            android:imeOptions="actionDone"
            android:inputType="textWebEmailAddress"
            android:maxLength="255"/>


    </android.support.design.widget.TextInputLayout>


</RelativeLayout>